# DupDup

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue  main.js  router.js  store.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DirectoryItem.vue
src/page/: Config.vue  DeleteProgress.vue  Index.vue  Preview.vue
