[package]
name = "dupdup"
version = "0.1.0"
description = "A cross-platform duplicate file finder"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "dupdup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.3", features = [] }
sha2 = "0.10.8"
walkdir = "2.4.0"
rayon = "1.8.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# and the built-in dev server is disabled.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
